# Misc

./: README.md
C/: .gitignore  README.md
C/file_reader/: Makefile  file_reader.c  sample.xml
C/os_programming/01_fork/: fork_01.c  fork_02.c  fork_03.c
C/os_programming/02_shm/: shm_pipe_01.c  shm_pipe_02.c  shm_pipe_03.c
C/os_programming/03_signal/: signal_01.c  signal_02.c  signal_03.c  signal_04.c  signal_05.c
C/os_programming/04_threads/: threads_01.c  threads_02.c  threads_03.c  threads_04.c  threads_05.c
C/server_client/multi_server/client/: Makefile  send_client.c
C/server_client/multi_server/server/: Makefile  multi_server.c
C/server_client/single_server/client/: Makefile  socket_client.c
C/server_client/single_server/server/: Makefile  socket_server.c
Games/: README.md
Games/BoredRobots/: README.md  Todo.txt
Games/BoredRobots/Application/: CMakeLists.txt
Games/BoredRobots/Tests/: CMakeLists.txt
Games/BoredRobots/src/BoredRobots/: CMakeLists.txt  ExampleRectangle.cpp  ExampleRectangle.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  GameObject.h  GameView.cpp  GameView.h  MoveToWayPoint.cpp  MoveToWayPoint.h  Movement.h  main.cpp
Games/BoredRobots/src/BoredRobotsTests/: CMakeLists.txt  ExampleRectangleTest.cpp  MoveToWayPointTest.cpp
Games/TowerDefense/: .gitignore
Games/TowerDefense/app/: build.gradle  proguard-rules.pro
Java/: .gitignore  README.md
Java/Chat/src/aufgabe08/: Main.java
Java/Chat/src/controller/: ConnectController.java  Events.java  GraphicController.java  ReceiveController.java  SendController.java
Java/Chat/src/model/: ChatApplication.java  Graphic.java  Transmitter.java
Java/Chat/src/view/: ChatView.form  ChatView.java  DrawingPane.java
Java/CountdownBean/src/aufgabe09/: Main.java  Window.form  Window.java
Java/Drawing/src/grafik_ohne_mvc/: Clock.java  DrawingPane.java  Main.java
Java/DrawingMVC/src/aufgabe07/: Aufgabe07.java
Java/FactoryJaegerBeute/: .project  README.md
Java/FactoryJaegerBeute/doc/: U04_Fabrik.eap  Vortrag.odp
Java/FactoryJaegerBeute/src/Factory/: AFGelaende.java  APBeute.java  APJaeger.java  KFSteppe.java  KFWald.java  PSteppenBeute.java  PSteppenJaeger.java  PWaldBeute.java  PWaldJaeger.java
Java/FactoryJaegerBeute/src/Main/: AssetsManager.java  BackGround.java  Controller.java  GameHandler.java  GrafikHandler.java  Main.java  Model.java  View.java
Java/FactoryJaegerBeute/src/Strategy/: Position.java  eAktion.java
Java/FirstWindow/src/aufgabe01/: Main.java  MyWindow.java
Java/HexEditor/src/aufgabe04/: Main.java
(+92 files in other folders)
